fixed another issue with the gap between the containers in the groomsmen and bridesmaid section

--- a/styles/story-styles.css
+++ b/styles/story-styles.css
@@ -230,8 +230,7 @@ nav {
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 1.5rem;
-    align-self: stretch;    
+    gap: 3rem;
 }
 
 .train h2 {
